from __future__ import annotations

from dataclasses import dataclass, field
from typing import Any


@dataclass(frozen=True)
class ConvResult:
    kind: str
    payload: Any
    attrs: dict[str, Any] = field(default_factory=dict)
