@startuml
!include ../theme.plantuml

package "glacium.file.import" {
  package "Indexing" {
    class FileMeta {
      +filepath: Path
      +filetype: tuple
      +filedate: datetime
      +shot: int | None
    }


    abstract class Indexer {
      +index(): list[FileMeta]
    }

    class FsIndexer {
      +root: Path
      +files: list[FileMeta]
      +index(): list[FileMeta]
    }

    class H5Indexer {
      +store: Path
      +index(): list[FileMeta]
    }

    abstract class Converter {
      +convert(meta: FileMeta, src: Source, sink: Sink)
    }

    class ConfigDropConverter
    class ConvergDropConverter

    class TypeIndex {
      -_index: dict
      +get(filetype: tuple[str, ...]): Converter | None
    }
  }

  package "Parsing" {
    abstract class Parser {
      +parse(content: bytes | str, meta: FileMeta): ConvResult
    }

    class ConvergParser {
      +parse(content: bytes | str, meta: FileMeta): ConvResult
    }

    class TextParser {
      +parse(content: bytes | str, meta: FileMeta): ConvResult
    }

    class ConvResult {
      +kind: str
      +payload: Any
      +attrs: dict[str, Any]
    }
  }

  package "IO" {
    abstract class Source {
      +open(meta: FileMeta): BinaryIO
    }

    abstract class Sink {
      +open(meta: FileMeta, name: str): BinaryIO
    }

    class FSSource
    class FSSink {
      +out_root: Path
    }

    class H5Source {
      +h5_path: Path
      +base: str
      +dataset_name: str
    }

    class H5Sink {
      +h5_path: Path
      +base: str
      +chunk_bytes: int
    }
  }

  package "Service" {
    class ConvergJobs {
      +registry: TypeIndex
      +fs_convert_to_fs(meta: FileMeta, out_root: Path)
      +fs_to_h5_raw(meta: FileMeta, h5_path: Path)
      +fs_convert_to_h5_converted(meta: FileMeta, h5_path: Path)
      +h5_raw_to_h5_converted(meta: FileMeta, h5_path: Path)
      +h5_raw_to_fs_spawn(meta: FileMeta, h5_path: Path, out_root: Path)
      +h5_converted_to_fs_spawn(meta: FileMeta, h5_path: Path, out_root: Path)
    }
  }
}

Indexer <|-- FsIndexer
Indexer <|-- H5Indexer
Converter <|-- ConfigDropConverter
Converter <|-- ConvergDropConverter
Parser <|-- ConvergParser
Parser <|-- TextParser
Source <|-- FSSource
Source <|-- H5Source
Sink <|-- FSSink
Sink <|-- H5Sink

TypeIndex o-- Converter : registry
ConvergJobs o-- TypeIndex : registry

Indexer ..> FileMeta : builds
Parser ..> FileMeta
Parser ..> ConvResult
Converter ..> FileMeta
Converter ..> Source
Converter ..> Sink
ConvergJobs ..> FileMeta
ConvergJobs ..> Source
ConvergJobs ..> Sink

@enduml
